split scss file and delete Unnecessary files

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,592 +1,6 @@
-/*====================================
-
-  配色テーマカラー
-  基本的にこの中の色を使う
-  #fffと#000は例外的に使用可能
-
-====================================*/
-$darkBackground:#2b2c38;
-$lightBackground:#f4f7f9;
-$disabled:#ccc;
-$black:#2b2c38;
-$middle:#888;
-$white:#dcdcdc;
-$blue:#739AB1;
-$gray:#CECABF;
-$orange:#DEA785;
-$deepOrange:#9D6B7D;
-$red:#9D6B7D;
-$purple:#6A5E76;
-
-/*====================================
-
-	scssブレイクポイント設定
-
-====================================*/
-
-$queries: ('smallMobile':'screen and (max-width: 375px)',
-  'mobile': 'screen and (max-width: 600px)',
-  'tablet': 'screen and (max-width: 959px)',
-  'desktop': 'screen and (min-width: 960px)',
-  'dark':'(prefers-color-scheme: dark) ',
-) !default;
-
-@mixin mediaQuery($query: desktop) {
-  @media #{map-get($queries, $query)} {
-    @content;
-  }
-}
-
-/*====================================
-
-	Baseクラス
-
-====================================*/
-
-html,
-body {
-  height: 100%;
-  font-family: Alegreya, sans-serif;
-  background-color: $lightBackground;
-  color: $black;
-}
-
-@include mediaQuery(dark) {
-
-  html,
-  body {
-    background: $darkBackground;
-    color: $white
-  }
-
-  a {
-    color: $white
-  }
-}
-
-
-/*====================================
-
-	helperクラス
-
-====================================*/
-
-
-.hp-displayNone__mobile {
-  @include mediaQuery($query: mobile) {
-    display: none !important;
-  }
-}
-
-.hp-displayNone__desktop {
-  @include mediaQuery() {
-    display: none !important;
-  }
-}
-
-.hp-clickable:hover {
-  cursor: pointer;
-}
-
-.hp-hoverable:hover {
-  opacity: 0.7;
-}
-
-.hp-red-text {
-  color: $red !important;
-}
-
-.hp-mt10 {
-  margin-top: 10px;
-}
-
-.hp-mt20 {
-  margin-top: 20px;
-}
-
-.hp-mt30 {
-  margin-top: 30px;
-}
-
-/*====================================
-
-	elementクラス
-
-====================================*/
-
-.el_button {
-  text-align: center;
-}
-
-.el_button_inner {
-  cursor: pointer;
-  display: inline-block;
-  max-width: 100%;
-  background: #6A5E76;
-  padding: 10px 30px;
-  font-size: 1rem;
-  text-align: center;
-  text-decoration: none;
-  width: 150px;
-  border: none;
-  color: $white;
-  border-radius: 8px;
-  border: 2px solid transparent;
-  text-shadow: none;
-  transition: 0.2s;
-}
-
-.el_button_inner:hover:not(:disabled) {
-  background: $white;
-  border-color: currentColor;
-  color: $purple;
-}
-
-.el_button_inner:disabled {
-  background: $disabled;
-  cursor: auto;
-}
-
-/*====================================
-
-	layoutクラス
-
-====================================*/
-
-.ly_pageWrapper {
-  padding: 20px 10px;
-  max-width: 960px;
-  margin: 0 auto;
-  position: relative;
-
-  @include mediaQuery {
-    padding: 30px 20px;
-  }
-
-  &:after {
-    content: "Browser：Light mode";
-    position: absolute;
-    right: 10px;
-    top: 10px;
-  }
-
-  @include mediaQuery(dark) {
-    &:after {
-      content: "Browser：Dark mode"
-    }
-  }
-}
-
-.ly_page {
-  position: relative;
-}
-
-.ly_introduce {
-  max-width: 600px;
-  padding: 10px 10px 20px;
-
-  @include mediaQuery{
-    padding: 10px 0 20px;
-  }
-}
-
-.ly_previewAlert {
-  padding: 20px 30px;
-}
-
-.bl_pageHeader {
-  margin-top: 30px;
-  display: flex;
-  align-items: flex-end;
-  flex-wrap: wrap;
-  justify-content: space-between;
-
-  @include mediaQuery {
-    margin-top: 40px;
-  }
-}
-
-//.bl_pageHeader_inner←フレックス用wrap
-
-.bl_pageHeader_title {
-  font-size: 24px;
-
-  @include mediaQuery {
-    font-size: 26px;
-  }
-}
-
-.bl_pageHeader_subtitle {
-  margin-top: 10px;
-  font-size: 22px;
-
-  @include mediaQuery {
-    margin-top: 15px;
-    font-size: 24px;
-  }
-}
-
-.ly_footer {
-  padding: 30px;
-  font-size: 18px;
-  text-align: center;
-
-  a {
-    color: $purple;
-  }
-
-  @include mediaQuery {
-    padding: 40px;
-    font-size: 20px;
-  }
-}
-
-.ly_container {
-  display: flex;
-  justify-content: flex-start;
-  flex-wrap: wrap;
-}
-
-.ly_container_item {
-  width: calc(100% / 3 - 10px);
-  margin: 20px 5px 0;
-  min-width: 160px;
-  min-height: 280px;
-  transition: 0.5s;
-
-  @include mediaQuery {
-    width: calc(100% / 3 - 20px);
-    margin: 30px 10px 0;
-  }
-
-  @include mediaQuery(mobile) {
-    width: calc(100% / 2 - 10px);
-    margin: 20px 5px 0;
-    min-width: 160px;
-    transition: 0.5s;
-  }
-
-  @include mediaQuery(smallMobile) {
-    width: 100%;
-    margin: 20px 10px 0;
-  }
-}
-
-.ly_blogDetail {
-  padding: 30px 10px 5px;
-
-  @include mediaQuery {
-    padding: 40px 25px 10px;
-
-  }
-}
-
-// .ly_blogDetail_header {}
-
-// .ly_blogDetail_body {}
-
-/*====================================
-
-	card(トップページのリストカード単体)
-
-====================================*/
-
-.bl_navTitle {
-  font-size: 40px;
-  font-weight: 900;
-
-  @include mediaQuery {
-    font-size: 48px;
-  }
-}
-
-/*====================================
-
-	card(トップページのリストカード単体)
-
-====================================*/
-.bl_card {
-  background: #fff;
-  border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.15) 2px 5px 25px;
-  padding: 10px 15px 5px;
-
-  @include mediaQuery(dark) {
-    background: #333;
-  }
-
-  @include mediaQuery {
-    padding: 15px 20px 5px;
-  }
-
-  &:hover {
-    opacity: 0.7;
-  }
-}
-
-.bl_card_imgWrap {
-  margin-top: 10px;
-  height: 150px;
-  position: relative;
-  overflow: hidden;
-
-  >img {
-    position: absolute;
-    object-fit: cover;
-    height: 100%;
-    width: 100%;
-    right: 50%;
-    bottom: 50%;
-    transform: translate(50%, 50%);
-  }
-}
-
-.bl_card_textWrap {
-  padding: 5px;
-}
-
-.bl_card_title {
-  margin-top: 10px;
-  font-size: 16px;
-}
-
-.bl_card_text {
-  margin-top: 10px;
-  font-size: 14px;
-  color: $middle;
-}
-
-.bl_card_categories {
-  margin-top: 10px;
-}
-
-/*====================================
-
-  category(リストカードについてるタグ)
-
-====================================*/
-
-.bl_category_wrapper {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.bl_category_wrapper__right {
-  justify-content: flex-end;
-}
-
-.bl_category {
-  margin-top: 5px;
-  font-size: 13px;
-  padding: 5px;
-  margin-right: 5px;
-  border-radius: 10px;
-  background-color: $blue;
-  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
-
-  p {
-    color: $white;
-  }
-}
-
-.bl_category_tagWrap {
-  margin-top: 5px;
-  color: $blue;
-  padding: 5px;
-  display: flex;
-  align-items: center;
-}
-
-/*====================================
-
-  blogHeader
-
-====================================*/
-
-.blogHeader {}
-
-.bl_blogHeader_title {
-  margin-top: 10px;
-  font-size: 36px;
-
-  @include mediaQuery {
-    margin-top: 20px;
-    font-size: 40px;
-  }
-}
-
-.bl_blogHeader_subtitle {
-  margin-top: 20px;
-  font-size: 26px;
-
-  @include mediaQuery {
-    margin-top: 30px;
-    font-size: 32px;
-  }
-}
-
-.bl_blogHeader_categories {
-  margin-top: 10px;
-
-  @include mediaQuery {
-    margin-top: 20px;
-  }
-}
-
-.bl_blogHeader_imgWrap {
-  margin-top: 20px;
-  width: 100%;
-
-  @include mediaQuery {
-    margin-top: 30px;
-  }
-
-  >img {
-    margin: 0 auto;
-    width: 90%;
-
-    @include mediaQuery {
-      width: 80%;
-    }
-  }
-}
-
-/*====================================
-
-  blogBody
-
-====================================*/
-
-.bl_blogBody {
-  img {
-    margin: 20px auto 0;
-    width: 80%;
-    max-width: 500px;
-
-    @include mediaQuery {
-      width: 70%;
-    }
-  }
-
-  pre {
-    margin: 0;
-
-    @include mediaQuery {
-      margin: 20px 20px 0;
-    }
-  }
-
-  code {
-    padding: 10px;
-
-    @include mediaQuery {
-      padding: 20px;
-    }
-  }
-
-  p {
-    margin-top: 20px;
-
-    @include mediaQuery {
-      margin-top: 15px;
-    }
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin-top: 25px;
-
-    @include mediaQuery {
-      margin-top: 30px;
-    }
-  }
-}
-
-/*====================================
-
-  searchBox
-
-====================================*/
-
-.bl_searchBox {
-  padding: 10px;
-  text-align: right;
-  margin: 0 0 0 auto
-}
-
-.bl_searchBox_header {
-  font-size: 20px;
-
-  @include mediaQuery {
-    font-size: 22px;
-  }
-}
-
-.bl_searchBox_input {
-  display: block;
-  margin-top: 10px;
-  border-radius: 5px;
-  border: 1px solid #999;
-  background-color: #fff;
-  padding: 5px;
-  font-size: 16px;
-}
-
-.bl_searchBox_icon {
-  position: absolute;
-  left: 5px;
-  bottom: 50%;
-  transform: translateY(50%);
-}
-
-.bl_button2 {
-  margin-top: 5px;
-  position: relative;
-  display: inline-block;
-}
-
-.bl_button2_inner {
-  -webkit-appearance: none;
-  padding: 5px 30px 5px 15px;
-  border: 1px solid currentColor;
-  color: $black;
-  text-decoration: none;
-  border-radius: 5px;
-  transition: .5s;
-  text-align: center;
-  background-color: #6d6d74;
-  font-size: 16px;
-}
-
-.bl_button2_inner:not(:disabled) {
-  background-color: #efefef;
-}
-
-.bl_button2_icon {
-  position: absolute;
-  right: 5px;
-  bottom: 50%;
-  transform: translateY(50%);
-  color: $black;
-  pointer-events: none;
-  transition: .25s;
-}
-
-.bl_button2:focus,
-.bl_button2:hover {
-  .bl_button2_inner:not(:disabled) {
-    background-color: $black;
-    color: $white;
-    cursor: pointer;
-  }
-
-  .bl_button2_inner:not(:disabled)~.bl_button2_icon {
-    color: $white;
-  }
-}
+@import "reset.scss";
+@import "base.scss";
+@import "layout.scss";
+@import "element.scss";
+@import "block.scss";
+@import "helper.scss";
