--- a/styles/block.scss
+++ b/styles/block.scss
@@ -73,13 +73,15 @@
 
 ====================================*/
 .bl_card {
-  background: #fff;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.15) 2px 5px 25px;
   padding: 10px 15px 5px;
+  background: $black;
+  color: $white;
 
   @include mediaQuery(dark) {
-    background: #333;
+    background: $white;
+    color: $black;
   }
 
   @include mediaQuery {
