modify buttonColor and fixed search button

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -16,6 +16,7 @@
   src: url('fonts/Alegreya/Alegreya-Regular.ttf') format("truetype");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -23,6 +24,7 @@
   src: url('fonts/Alegreya/Alegreya-Bold.ttf') format("truetype");
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -30,6 +32,7 @@
   src: url('fonts/Alegreya/Alegreya-Black.ttf') format("truetype");
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 
 /*====================================
