--- a/styles/element.scss
+++ b/styles/element.scss
@@ -12,32 +12,32 @@
   cursor: pointer;
   display: inline-block;
   max-width: 100%;
-  background: $purple;
   padding: 10px 30px;
   font-size: 1rem;
   text-align: center;
   text-decoration: none;
   width: 150px;
   border: none;
-  color: $lightBackground;
   border-radius: 8px;
   border: 2px solid transparent;
   text-shadow: none;
   transition: 0.2s;
+  color: $lightBackground;
+  background: $black;
 
   @include mediaQuery(dark) {
-    background: $orange;
-    color: $darkBackground;
+    color: $black;
+    background: $lightBackground;
   }
 }
 
 .el_button_inner:hover:not(:disabled) {
-  background: $lightBackground;
   border-color: currentColor;
-  color: $purple;
+  color: $black;
+  background: $lightBackground;
 
   @include mediaQuery(dark) {
-    color: $orange;
+    color: $white;
     background: $darkBackground;
   }
 }
