--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -39,9 +39,9 @@
   text-align: center;
 
   a {
-    color: $purple;
+    color: $black;
     @include mediaQuery(dark) {
-      color: $orange;
+      color: $white;
     }
   }
 
