--- a/styles/element.scss
+++ b/styles/element.scss
@@ -43,6 +43,7 @@
 }
 
 .el_button_inner:disabled {
+  color: $black;
   background: $disabled;
   cursor: auto;
 }
@@ -62,12 +63,14 @@
   border-radius: 5px;
   transition: .5s;
   text-align: center;
-  background-color: #6d6d74;
+  background: #efefef;
   font-size: 16px;
 }
 
-.el_inputButton_inner:not(:disabled) {
-  background-color: #efefef;
+.el_inputButton_inner:disabled {
+  color: $black;
+  background: $disabled;
+  cursor: auto;
 }
 
 .el_inputButton_icon {
@@ -83,7 +86,7 @@
 .el_inputButton:focus,
 .el_inputButton:hover {
   .el_inputButton_inner:not(:disabled) {
-    background-color: $black;
+    background: $black;
     color: $white;
     cursor: pointer;
   }
