--- a/styles/block.scss
+++ b/styles/block.scss
@@ -147,10 +147,9 @@
 }
 
 .bl_category {
-  margin-top: 5px;
+  margin: 5px 5px 0 0;
   font-size: 13px;
   padding: 5px;
-  margin-right: 5px;
   border-radius: 10px;
   background-color: $blue;
   box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
