--- a/styles/block.scss
+++ b/styles/block.scss
@@ -5,9 +5,9 @@
 ====================================*/
 
 .bl_navTitle {
+  display: block;
   font-size: 40px;
   font-weight: 900;
-
   @include mediaQuery {
     font-size: 48px;
   }
@@ -27,14 +27,9 @@
 }
 
 .bl_pageHeader {
-  margin-top: 30px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-
-  @include mediaQuery {
-    margin-top: 40px;
-  }
 }
 
 //.bl_pageHeader_inner←フレックス用wrap
@@ -87,10 +82,6 @@
   @include mediaQuery {
     padding: 15px 20px 5px;
   }
-
-  &:hover {
-    opacity: 0.7;
-  }
 }
 
 .bl_card_imgWrap {
@@ -123,10 +114,6 @@
   margin-top: 10px;
   font-size: 14px;
   height: 20px;
-}
-
-.bl_card_categories {
-  margin-top: 10px;
 }
 
 /*====================================
