--- a/styles/element.scss
+++ b/styles/element.scss
@@ -22,30 +22,51 @@
   border: 2px solid transparent;
   text-shadow: none;
   transition: 0.2s;
-  color: $lightBackground;
+  color: $white;
   background: $black;
 
   @include mediaQuery(dark) {
     color: $black;
-    background: $lightBackground;
+    background: $white;
+  }
+
+  &:hover:not(:disabled) {
+    border-color: currentColor;
+    color: $black;
+    background: $white;
+
+    @include mediaQuery(dark) {
+      color: $white;
+      background: $black;
+    }
+  }
+
+  &:disabled {
+    color: $black;
+    background: $disabled;
+    cursor: auto;
   }
 }
 
-.el_button_inner:hover:not(:disabled) {
-  border-color: currentColor;
+.el_button_inner.el_button_inner__colorReverse {
   color: $black;
-  background: $lightBackground;
+  background: $white;
 
   @include mediaQuery(dark) {
     color: $white;
-    background: $darkBackground;
+    background: $black;
   }
-}
 
-.el_button_inner:disabled {
-  color: $black;
-  background: $disabled;
-  cursor: auto;
+  &:hover:not(:disabled) {
+    border-color: currentColor;
+    color: $white;
+    background: $black;
+
+    @include mediaQuery(dark) {
+      color: $black;
+      background: $white;
+    }
+  }
 }
 
 .el_inputButton {
