--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -28,10 +28,13 @@
   }
 }
 
-.ly_page {
+.ly_main {
   position: relative;
+  margin-top: 30px;
+  @include mediaQuery {
+    margin-top: 40px;
+  }
 }
-
 
 .ly_footer {
   padding: 30px;
@@ -40,6 +43,7 @@
 
   a {
     color: $black;
+
     @include mediaQuery(dark) {
       color: $white;
     }
