--- a/styles/element.scss
+++ b/styles/element.scss
@@ -84,7 +84,7 @@
   border-radius: 5px;
   transition: .5s;
   text-align: center;
-  background: #efefef;
+  background: $input;
   font-size: 16px;
 }
 
