--- a/styles/base.scss
+++ b/styles/base.scss
@@ -16,7 +16,7 @@
   src: url('fonts/Alegreya/Alegreya-Regular.ttf') format("truetype");
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -24,7 +24,7 @@
   src: url('fonts/Alegreya/Alegreya-Bold.ttf') format("truetype");
   font-weight: 700;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -32,7 +32,7 @@
   src: url('fonts/Alegreya/Alegreya-Black.ttf') format("truetype");
   font-weight: 900;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 /*====================================
