add button helper

--- a/styles/element.scss
+++ b/styles/element.scss
@@ -48,6 +48,10 @@
   }
 }
 
+.el_button_inner__sizeL {
+  width: 200px;
+}
+
 .el_button_inner.el_button_inner__colorReverse {
   color: $black;
   background: $white;
