--- a/styles/block.scss
+++ b/styles/block.scss
@@ -5,7 +5,7 @@
 ====================================*/
 
 .bl_navTitle {
-  display: block;
+  display: inline-block;
   font-size: 40px;
   font-weight: 900;
 
